--- a/views/account/change_passwd.ejs
+++ b/views/account/change_passwd.ejs
@@ -104,7 +104,7 @@
           </ul>
         </li>
         </li>
-        <li class=" nav-item"><a href="/manage"><i class="icon-android-menu"></i><span
+        <li class=" nav-item"><a href="/manage/showlist"><i class="icon-android-menu"></i><span
           data-i18n="" class="menu-title">问卷管理</span></a>
         </li>
         <li class=" nav-item"><a href="/statistics"><i class="icon-folder3"></i><span data-i18n=""
