--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -97,7 +97,7 @@
         <li class=" nav-item"><a href="index"><i class="icon-home3"></i><span data-i18n="nav.dash.main"
                                                                                   class="menu-title">我的账户</span></a>
         </li>
-        <li class=" nav-item"><a href="/manage"><i class="icon-android-menu"></i><span
+        <li class=" nav-item"><a href="/manage/showlist"><i class="icon-android-menu"></i><span
           data-i18n="" class="menu-title">问卷管理</span></a>
         </li>
         <li class=" nav-item"><a href="/statistics"><i class="icon-folder3"></i><span data-i18n=""
