完成问卷编辑页面前端 添加question表 修复跳转bug

--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -180,10 +180,10 @@
 
               <div class="form-actions center">
                 <button type="button" class="btn btn-warning mr-1" id="cancle">
-                  <i class="icon-cross2"></i> 取消
+                  <a href="/account/login"><i class="icon-cross2"></i> 取消</a>
                 </button>
                 <button type="button" class="btn btn-primary" id="submit">
-                  <i class="icon-check2"></i> 提交
+                  <i class="icon-check2"></i> 提交</a>
                 </button>
               </div>
             </form>
