--- a/views/manage/editquestionaire.ejs
+++ b/views/manage/editquestionaire.ejs
@@ -136,7 +136,9 @@
       <div class="content-body"><!-- Overview -->
         <div class="card">
           <div class="card-header">
-              <h4 class="card-title">Special title treatment</h4>
+              <h4 class="card-title"><%= title %></h4>
+          </br>
+              <h6 class="card-subtitle mb-1 text-muted"><em><%= description %></em></h6>
               <div class="heading-elements">
                   <ul class="list-inline mb-0">
                       <li><a data-action="collapse"><i class="icon-minus4"></i></a></li>
@@ -151,103 +153,86 @@
                   <div class="row">
                     <div class="col-xs-10 col-md-10 offset-md-1 offset-xs-1">
                       <div class="form-body">
-
-                        <div class="form-group">
-                          <label>1. 单选题</label>
-                          <div class="input-group" id="typeOfUser">
-                            <label class="display-inline-block custom-control custom-radio ml-1">
-                              <input type="radio" name="typeOfUserRadio" name="customer1" value="Buy" checked
-                                class="custom-control-input">
-                              <span class="custom-control-indicator"></span>
-                              <span class="custom-control-description ml-0">我要买东西</span>
-                            </label>
-                          </br>
-                            <label class="display-inline-block custom-control custom-radio ml-1">
-                              <input type="radio" name="typeOfUserRadio" name="customer1" value="Sell"
-                                class="custom-control-input">
-                              <span class="custom-control-indicator"></span>
-                              <span class="custom-control-description ml-0">我要卖东西</span>
-                            </label>
-                          </br>
-                            <label class="display-inline-block custom-control custom-radio ml-1">
-                              <input type="radio" name="typeOfUserRadio" name="customer1" value="Admin"
-                                class="custom-control-input">
-                              <span class="custom-control-indicator"></span>
-                              <span class="custom-control-description ml-0">我要成为管理员</span>
-                            </label>
-                          </div>
-                        </div>
-
-                        <div class="form-group">
-                          <label>2. 多选题</label>
-                          <div class="input-group" id="typeOfUser">
-                            <label class="display-inline-block custom-control custom-checkbox ml-1">
-                              <input type="checkbox" name="typeOfUserRadio" name="customer1" value="Buy" checked
-                                class="custom-control-input">
-                              <span class="custom-control-indicator"></span>
-                              <span class="custom-control-description ml-0">我要买东西</span>
-                            </label>
-                          </br>
-                            <label class="display-inline-block custom-control custom-checkbox ml-1">
-                              <input type="checkbox" name="typeOfUserRadio" name="customer1" value="Sell"
-                                class="custom-control-input">
-                              <span class="custom-control-indicator"></span>
-                              <span class="custom-control-description ml-0">我要卖东西</span>
-                            </label>
-                          </br>
-                            <label class="display-inline-block custom-control custom-checkbox ml-1">
-                              <input type="checkbox" name="typeOfUserRadio" name="customer1" value="Admin"
-                                class="custom-control-input">
-                              <span class="custom-control-indicator"></span>
-                              <span class="custom-control-description ml-0">我要成为管理员</span>
-                            </label>
-                          </div>
-                        </div>
-
-                        <div class="form-group">
-                          <label for="eventInput4">3. 单行文本框</label>
-                          <input type="text" id="emailAddr" class="form-control" placeholder="emailAddr" name="email">
-                        </div>
-    
-                        <div class="form-group">
-                          <label for="eventInput4">4. 多行文本框</label>
-                        </br>
-                          <textarea rows="5" type="text" id="emailAddr" class="form-control" placeholder="emailAddr" name="email"></textarea>
-                        </div>
-
-                        <div class="form-group">
-                          <label for="eventInput1">5. 数字框</label>
-                          <input type="number" id="username" class="form-control" placeholder="username" name="fullname">
-                        </div>
-
-                        <div class="form-group">
-                          <label for="eventInput1">6. 小数框</label>
-                          <input type="number" step="0.01" id="username" class="form-control" placeholder="username" name="fullname">
-                        </div>
-
-                        <div class="form-group">
-                          <label for="eventInput1">7. 评分框</label>
+                        <!-- 根据后台数据显示不同类型的问题 -->
+                        <% for (var i = 0; i < details.length; i++) { %>
+                          <!-- 单选 -->
+                          <% if (details[i].type == 1) {%>
+                            <div class="form-group">
+                              <label for="eventInput4"><%= i+1 %>. <%= details[i].title %></label>
+                              <div class="input-group" id="typeOfUser">
+                                <% var choice = strip(details[i].description) %>
+                                <% for (var m = 0; m < choice.length; m++) { %>
+                                  <label class="display-inline-block custom-control custom-radio ml-1">
+                                    <input type="radio" name="typeOfUserRadio" name="customer1" value="<%= m+1 %>"
+                                      class="custom-control-input">
+                                    <span class="custom-control-indicator"></span>
+                                    <span class="custom-control-description ml-0"><%= choice[m]%></span>
+                                  </label>
+                                </br>
+                                <% } %>
+                            </div>
+                          <!-- 多选 -->
+                          <% } else if (details[i].type == 2) {%>
+                            <div class="form-group">
+                              <label for="eventInput4"><%= i+1 %>. <%= details[i].title %></label>
+                              <div class="input-group" id="typeOfUser">
+                                <% var choice = strip(details[i].description) %>
+                                <% for (var m = 0; m < choice.length; m++) { %>
+                                  <label class="display-inline-block custom-control custom-checkbox ml-1">
+                                    <input type="checkbox" name="typeOfUserRadio" name="customer1" value="<%= m+1 %>"
+                                      class="custom-control-input">
+                                    <span class="custom-control-indicator"></span>
+                                    <span class="custom-control-description ml-0"><%= choice[m]%></span>
+                                  </label>
+                                </br>
+                                <% } %>
+                            </div>
+                          <!-- 单行文本 -->
+                          <% } else if (details[i].type == 3) {%>
+                            <div class="form-group">
+                              <label for="eventInput4"><%= i+1 %>. <%= details[i].title %></label>
+                              <input type="text" id="question<%= i+1 %>" class="form-control" placeholder="请输入" name="<%= i+1 %>">
+                            </div>
+                          <!-- 多行文本 -->
+                          <% } else if (details[i].type == 4){ %>
+                            <div class="form-group">
+                              <label for="eventInput4"><%= i+1 %>. <%= details[i].title %></label>
+                            </br>
+                              <textarea rows="5" type="text" id="question<%= i+1 %>" class="form-control" placeholder="请输入" name="<%= i+1 %>"></textarea>
+                            </div>
+                          <!-- 数字 -->
+                          <% } else if (details[i].type == 5){ %>
+                            <div class="form-group">
+                              <label for="eventInput1"><%= i+1 %>. <%= details[i].title %></label>
+                              <input type="number" id="question<%= i+1 %>" class="form-control" placeholder="请输入" name="<%= i+1 %>">
+                            </div>
+                          <!-- 小数 -->
+                          <% } else if (details[i].type == 6){ %>
+                            <div class="form-group">
+                              <label for="eventInput1"><%= i+1 %>. <%= details[i].title %></label>
+                              <input type="number" step="<%= details[i].description %>" id="question<%= i+1 %>" class="form-control" placeholder="请输入" name="<%= i+1 %>">
+                            </div>
+                          <!-- 评分 -->
+                          <% } else if (details[i].type == 7){ %>
+                            <div class="form-group">
+                              <label for="eventInput1"><%= i+1 %>. <%= details[i].title %></label>
+                              <table class="table table-hover" width="90%" cellspacing="0" cellpadding="2">
+                                <tbody>
+                                  <% for (var j = 1; j <= trans(details[i].description); j++) { %>
+                                    <th><%= j %></th>
+                                  <% } %>
+                                  <tr>
+                                  <% for (var k = 1; k <= trans(details[i].description); k++) { %>
+                                    <td><input type="radio" value="<%= j %>" name="R<%= j %>"></td>
+                                  <% } %>
+                                  </tr>
+                                </tbody>
+                              </table>
+                            </div>
+                            
+                          <% } %>
                           
-                          <table class="table table-hover" width="90%" cellspacing="0" cellpadding="2">
-                            <tbody>
-                                <th>1</th>
-                                <th>2</th>
-                                <th>3</th>
-                                <th>4</th>
-                                <th>5</th>
-                                <th>6</th>
-                                <th>7</th>
-                              <tr>
-                                <td><input type="radio" value="V8" name="R8"></td>
-                                <td><input type="radio" value="V8" name="R8"></td>
-                                <td><input type="radio" value="V8" name="R8"></td>
-                                <td><input type="radio" value="V8" name="R8"></td>
-                                <td><input type="radio" value="V8" name="R8"></td>
-                                <td><input type="radio" value="V8" name="R8"></td>
-                                <td><input type="radio" value="V8" name="R8"></td>
-                              </tr>
-                            </tbody>
-                          </table>
+                        <% } %>
                         </div>
                       </div>
                     </div>
