--- a/views/manage/showlist.ejs
+++ b/views/manage/showlist.ejs
@@ -85,9 +85,9 @@
         </li>
         <li class="active"><a href=""><i class="icon-folder3"></i><span data-i18n="" class="menu-title">问卷管理</span></a>
         </li>
-        </li>
-        <li class="nav-item"><a href="/statistics"><i class="icon-android-menu"></i><span data-i18n="" class="menu-title">数据统计</span></a>
 
+        <li class="nav-item"><a href="/statistics"><i class="icon-android-menu"></i><span data-i18n="" class="menu-title">数据统计</span></a>
+        </li>
       </ul>
     </div>
     <!-- /main menu content-->
@@ -259,7 +259,8 @@
           </div>
         <% } %>
       </div>
-    
+    </div>
+  </div>
 
     <!-- BEGIN VENDOR JS-->
     <script src="../app-assets/js/core/libraries/jquery.min.js" type="text/javascript"></script>
