完成 发布问卷/终止发布功能 完善新建问卷功能 修复下拉框显示问题

--- a/views/manage/editquestionaire.ejs
+++ b/views/manage/editquestionaire.ejs
@@ -130,7 +130,7 @@
                       <select id="questiontype" class="combobox form-control selectpicker" name="questiontype">
                         <option></option>
                         <option value="0" selected>是非选择</option>
-                        <option value="1" selected>单项选择</option>
+                        <option value="1" >单项选择</option>
                         <option value="2">多项选择</option>
                         <option value="3">单行文本</option>
                         <option value="4">多行文本</option>
@@ -374,7 +374,7 @@
 
   <script type="text/javascript">
     $(document).ready(function () {
-      $("#type1").show();
+      $("#type1").hide();
       $("#type2").hide();
       $("#type3").hide();
     });
